refactor: L15 minor change